Set a global state class.
This is roughly what we're doing already, but this change adds one for
'uninitialized' so we can display a warning, and a convenient method for
replacing the entire class list.

--- a/main.css
+++ b/main.css
@@ -1,8 +1,15 @@
+#js-warning {
+  display: none;
+}
 #solution-spinner {
   display: none;
 }
 #countdown-container {
   display: none;
+}
+
+.uninit #js-warning {
+  display: block;
 }
 
 .problem-is-set #problem-controls {
