Lock the solution when time runs out.
Timer is reduced to 5 seconds for testing.
The correct thing to do would be to make it configurable,
but instead, I'll take the Terrible Ideas approach:
Hardcode it and tweak it just before publishing :)

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-#js-warning, #solution-spinner, #countdown-container, #solution-lists {
+#js-warning, #problem-controls, #solution-spinner, #countdown-container, #solution-lists, #solution-locked, .explanation {
   display: none;
 }
 
@@ -6,9 +6,10 @@
   display: block;
 }
 
-.problem-is-set #problem-controls {
-  display: none;
+.init #problem-controls {
+  display: block;
 }
+
 .problem-is-set #solution-spinner {
   display: block;
 }
@@ -17,6 +18,13 @@
 }
 .problem-is-set #solution-lists {
   display: inline-flex;
+}
+
+.solution-locked #solution-locked {
+  display: block;
+}
+#solution-locked.because-accepted .explanation.match-found, #solution-locked.because-stubborn .explanation.no-match {
+  display: block;
 }
 
 .solution-list {
