Make buttons bigger

--- a/main.css
+++ b/main.css
@@ -42,3 +42,8 @@
 .presentation-mode #presentation-mode {
   display: block;
 }
+
+/* Buttons should be big enough to be touch targets */
+button {
+  font-size: xxx-large;
+}
