--- a/main.css
+++ b/main.css
@@ -44,6 +44,17 @@
 }
 .presentation-mode #presentation-mode {
   display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-family: Arial, Helvetica, sans-serif;
+}
+#presentation-mode h1 {
+  font-size: xxx-large;
+}
+#presentation-mode h2 {
+  font-size: xx-large;
 }
 .slide0 #start-presentation {
   display: block;
